--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             <div class="col-lg-4 pr-lg-5">
               <h3 class="mb-4 heading-h3"><span class="gsap-reveal">We can make it together</span></h3>
               <p class="lead gsap-reveal">Hey, I&rsquo;m Khantil, an aspiring social entrepreneur &amp; a self taught Designer and developer
-                                         based in Ahmedabad, India.</p><p> I see my self as a blend of technolgy, buisness art and love.
+                                         based in Ahmedabad, India.</p><p class="lead gsap-reveal"> I see my self as a blend of technolgy, buisness art and love.
                                          I am happy to help people with passion for what they do and loves talking about future 
                                          and how the world could be changed.</p>
               <p class="gsap-reveal"><a href="images/khantilcv.docx" class="btn btn-outline-pill btn-custom-light">Download my CV</a></p>
