--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
           <div class="row align-items-center justify-content-between text-left">
             <div class="col-md-5 text-right">
               <ul class="site-nav-ul js-clone-nav text-left d-none d-lg-inline-block">
-                <li class="has-children">
+                <li>
                   <a href="#home-section" class="nav-link">Home</a>
-                  <ul class="dropdown">
+                  <!--<ul class="dropdown">
                     <li>
                       <a href="index.html">Hero Image BG</a>
                     </li>
@@ -75,7 +75,7 @@
                     <li>
                       <a href="index-right-menu.html">Right Menu</a>
                     </li>
-                  </ul>
+                  </ul>-->
                 </li>
                 <li><a href="#portfolio-section" class="nav-link">Portfolio</a></li>
                 <li><a href="#about-section" class="nav-link">About</a></li>
@@ -108,9 +108,11 @@
           <div class="row align-items-center">
               
             <div class="col-md-7 mx-auto text-center">
-              <h3 class="subheading gsap-reveal-hero">I’m </h3>
-              <h3 class="heading gsap-reveal-hero">Khantil</h3>
-              <h3 class="subheading gsap-reveal-hero">A Web Developer, UI Designer, Web Designer, Photographer, Photo Editor and an Illustrator.</h3>
+              <h3 class="subheading gsap-reveal-hero" style="color: #000000">I’m </h3>
+              <h3 class="heading gsap-reveal-hero" style="color: #000000">Khantil</h3>
+              <h3 class="subheading gsap-reveal-hero" style="color: #000000">A Web Developer, UI Designer,</h3>
+              <h3 class="subheading gsap-reveal-hero" style="color: #000000">Web Designer, Photographer</h3>
+              <h3 class="subheading gsap-reveal-hero" style="color: #000000">and an Illustrator.</h3>
             </div>
 
           </div>
